--- a/FoodCourt Management/App.config
+++ b/FoodCourt Management/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="FoodCourt_Management.Properties.Settings.ConnectionString"
+            connectionString="Data Source=localhost;Persist Security Info=True;User ID=dbsproj;Password=password;Unicode=True"
+            providerName="System.Data.OracleClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
